2005-03-20  Sven Panne  <sven.panne@aedion.de>

	* acconfig.h, acinclude.m4 aclocal.m4: Removed.

	* configure.ac: Modernized a bit, requiring autoconf 2.58
	now. Fixed alsa-dlopen, arts-dlopen and esd-dlopen flags. Removed
	random "spell checking" of arguments. Removed --with-gcc flag,
	setting CC is the "autoconf way" of doing that.

2005-03-18  Sven Panne  <sven.panne@aedion.de>

	* linux/audioconvert/ac_misc.c: Removed type punning, newer gcc
	don't like it. Made ReadChunk a bit nicer on the way.

	* linux/acinclude.m4, linux/aclocal.m4, linux/configure.ac,
	linux/src/Makefile.in: Removed MMX stuff, it is not working
	currently, the time of MMX detection is wrong, and even leads to
	compile-time errors.

	* linux/Makefile.in, linux/PLATFORM, linux/configure.ac,
	linux/configure.in: Renamed configure.in to configure.ac, the
	former is a misnomer, see the autoconf documentation.

2005-03-15  Sven Panne  <sven.panne@aedion.de>

	* linux/Makefile.in: Make relative versioning links to dynamic
	libraries instead of absolute ones. Among other things, it makes
	it possible to have relocatable packages, which is very nice for
	non-root users.

	* include/AL/alext.h, linux/src/al_main.c, linux/src/al_main.h,
	linux/src/alc/alc_context.c, linux/src/alc/alc_context.h,
	linux/src/extensions/al_ext_vorbis.c: Fixed the const-correctness
	of _alIsZeroVector, _alcSetContext and alutLoadVorbis_LOKI. Note
	that Ogg Vorbis' headers are not const-correct, so we still get a
	warning, this time for the 3rd parameter of ov_open_callbacks,
	which is a const pointer in reality.

	Corrected the first argument of _alcSetContext (ALCint vs. int).

	Removed a few incorrect UNUSED().

	* linux/src/al_source.c: Fixed a signed/unsigned comparison
	warning.

	* linux/src/al_source.c, linux/src/arch/alsa/alsa.c,
	linux/src/arch/arts/arts.c, linux/src/arch/esd/esd.c:
	Removed/#if'd a few unused variables.

	* linux/src/arch/alsa/alsa.c: Synchronized the type of