@@ -1,11 +1,16 @@
 2005-03-20  Sven Panne  <sven.panne@aedion.de>
 
-	* acconfig.h, acinclude.m4 aclocal.m4: Removed.
+	* Makefile.in, audioconvert/Makefile.in, configure.ac,
+	jlib/Makefile.in, src/Makefile.in, test/Makefile.in: Explicitly
+	handling MAKE is evil because it prevents the correct passing of
+	commandline arguments to sub-makes. Small cleanup.
 
 	* configure.ac: Modernized a bit, requiring autoconf 2.58
 	now. Fixed alsa-dlopen, arts-dlopen and esd-dlopen flags. Removed
 	random "spell checking" of arguments. Removed --with-gcc flag,
 	setting CC is the "autoconf way" of doing that.
+
+	* acconfig.h, acinclude.m4 aclocal.m4: Removed.
 
 2005-03-18  Sven Panne  <sven.panne@aedion.de>
 
